# bhex

./: .gitignore  CMakeLists.txt  README.md  config.h.in  progress.md  specifications.md  what I have learned.md
.github/workflows/: codeql.yml  linux_build.yml  windows_build.yml
src/: config.h  dump.c  dump.h  getopt.c  getopt.h  main.c  search.c  search.h  utils.c  utils.h
test/: test_search.c
